--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.10.0",
     "path": "^0.12.7",
     "stream": "^0.0.2",
