--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -24,6 +25,7 @@
     "moment": "^2.30.1",
     "mysql2": "^3.10.0",
     "path": "^0.12.7",
+    "qs": "^6.12.1",
     "stream": "^0.0.2",
     "util": "^0.12.5"
   }
