add firstFollow page, timeline summery and image carousel to fullfill userflow

--- a/server/.env.template
+++ b/server/.env.template
@@ -15,5 +15,9 @@ AWS_RDS_USERNAME=
 AWS_RDS_PASSWORD=
 AWS_RDS_DATABASE=
 
+AWS_S3_BUCKET_NAME=
+AWS_S3_BUCKET_REGION=
+AWS_S3_ACCESS_KEY=
+AWS_S3_ACCESS_SECRET_KEY=
 AWS_S3_CDN_URL=
 
