--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm": "^10.8.1",
     "path": "^0.12.7",
     "qs": "^6.12.1",
+    "sharp": "^0.33.4",
     "stream": "^0.0.2",
     "util": "^0.12.5"
   },
