reorganize folders and files and add README.md for user

--- a/server/.env.template
+++ b/server/.env.template
@@ -4,6 +4,18 @@ PORT=
 SESSION_SECRET=
 JWT_SECRET=
 
+PYTHON3_PATH=
+
+LINE_API_URI=
+LINE_ACCESS_URI=
+LINE_CHANNEL_ID=
+LINE_CHANNEL_SECRET=
+LINE_CALLBACK_URI=
+
+AWS_LAMBDA_USERNAME=
+AWS_LAMBDA_PASSWORD=
+
+MYSQL_DATABASE_CONNDB_INDEX=
 MYSQL_HOST=
 MYSQL_USER=
 MYSQL_PASSWORD=
@@ -14,6 +26,16 @@ AWS_RDS_PORT=
 AWS_RDS_USERNAME=
 AWS_RDS_PASSWORD=
 AWS_RDS_DATABASE=
+
+REDIS_DATABASE_CONNDB_INDEX=
+REDIS_LIST=
+REDIS_HOST=
+REDIS_USER=
+REDIS_PORT=
+REDIS_PASSWORD=
+
+AWS_CACHE_PRIMARY=
+AWS_CACHE_PORT=
 
 AWS_S3_BUCKET_NAME=
 AWS_S3_BUCKET_REGION=
